--- a/Danny/index.html
+++ b/Danny/index.html
@@ -118,7 +118,7 @@
 蓋瑞給妳帶來了提拉米蘇，他知道妳喜歡吃，所以想帶來給妳加油打氣，請說:謝謝蓋瑞
 
 長篇大論是我自己也想要試試看字數有沒有上限啦哈哈哈哈哈哈
-然後我發現一直盯著看字跑出來眼睛好像會很酸要記得眨眼睛喇
+然後我發現一直盯著看字跑出來眼睛好像會很酸要記得眨眼睛
 ૮ ⚆ﻌ⚆ა૮⚆ﻌ⚆ ა`
     };
 
@@ -218,3 +218,4 @@
   </script>
 </body>
 </html>
+
