--- a/Danny_PC/index.html
+++ b/Danny_PC/index.html
@@ -140,7 +140,7 @@
   <div id="input-container" class="container">
     <h1>For Danny</h1>
     <p>Please enter your name</p>
-    <input type="text" id="name-input" placeholder="Happy Thursday👽">
+    <input type="text" id="name-input" placeholder="Happy Thursday 👽👽👽👽">
     <button onclick="showMessage()">see message</button>
   </div>
 
@@ -350,4 +350,5 @@
   </script>
 </body>
 </html>
+
 
